--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@ https://templatemo.com/tm-533-verticard
             我是柏翰，
           </p>
           <p>
-            是一個善長自學、積極樂觀的行動派。
+            是一個喜歡自學、積極樂觀的行動派。
           </p>
           <p>
             曾擔任各大小活動長、總召，
           </p>
           <p>
-            擅長領導並組織大型團隊活動。
+            曾領導並組織大型團隊活動。
           </p>
           <p>
             現就讀醫學工程學系，
           </p>
           <p>
-            擁有跨域溝通、程式撰寫的能力。
+            正積極培育跨域溝通、程式能力。
           </p>
           <p>
             對事物充滿好奇，樂於嘗試新挑戰。
